--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "wordnext",
   "version": "0.1.0",
   "description": "Wordpress looking like admin panel for Next.js",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
