--- a/package.json
+++ b/package.json
@@ -27,23 +27,31 @@
     "url": "https://github.com/777sevensevenseven777/wordnext/issues"
   },
   "homepage": "wordnext.dev",
+  "dependencies": {
+    "babel-plugin-react-css-modules": "^5.2.6"
+  },
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-css-modules-transform": "^1.6.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.2.1",
     "css-loader": "^6.5.1",
     "mini-css-extract-plugin": "^2.5.2",
     "nodemon": "^2.0.15",
-    "sass": "^1.49.0",
-    "sass-loader": "^12.4.0",
+    "postcss": "^8.4.5",
+    "postcss-loader": "^6.2.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
-    "typescript-plugin-css-modules": "^3.4.0",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1"
   },
   "peerDependencies": {
     "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "next": "^12.0.8"
   }
 }
