--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "module": "es6",
     "declaration": true,
     "outDir": "./dist",
@@ -12,11 +12,6 @@
     "allowJs": true,
     "moduleResolution": "node",
     "baseUrl": ".",
-    "plugins": [
-      {
-        "name": "typescript-plugin-css-modules"
-      }
-    ]
   },
   "include": [
     "src/**/*.ts",
