--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
   "presets": [
-    "@babel/preset-typescript",
-    "@babel/preset-react"
+    // "@babel/preset-env",
+    // "@babel/preset-typescript"
+    // "@babel/preset-react"
+  ],
+  "plugins": [
+    // "styled-jsx/babel"
   ]
 }
